--- a/config/urchin.conf
+++ b/config/urchin.conf
@@ -28,3 +28,8 @@ CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 CONFIG_NICE_VIEW_GEM_ANIMATION=n
 
 # source: https://github.com/M165437/nice-view-gem/blob/main/README.md
+
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
+CONFIG_ZMK_POINTING=y
