--- a/config/west.yml
+++ b/config/west.yml
@@ -9,9 +9,9 @@ manifest:
       # kyek / duckyb
     - name: duckyb
       url-base: https://github.com/duckyb
-      # nice-view-gem
-    - name: m165437
-      url-base: https://github.com/M165437
+      # hammerbeam-slideshow
+    - name: nspsck
+      url-base: https://github.com/nspsck
   projects:
     - name: zmk
       remote: zmkfirmware
@@ -20,8 +20,8 @@ manifest:
     - name: urchin-zmk-module
       remote: duckyb
       revision: main
-    - name: nice-view-gem
-      remote: m165437
+    - name: hammerbeam-slideshow
+      remote: nspsck
       revision: main
   self:
     path: config
