--- a/build.yaml
+++ b/build.yaml
@@ -14,10 +14,10 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: urchin_left nice_view_adapter  nice_view
+    shield: urchin_left nice_view_adapter nice_view
     snippet: studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_STUDIO_LOCKING=n
   - board: nice_nano_v2
-    shield: urchin_right nice_view_adapter nice_view
+    shield: urchin_right nice_view_adapter nice_view_custom
   - board: nice_nano_v2
     shield: settings_reset
